Add Reboot Monitor session management, recommend command, API route, and related tests
- Implemented `rebootMonitorSession` in Moon to handle session read, write, and prioritization for reboot monitor workflows.
- Introduced `recommendCommand` in Portal to enable Discord-based recommendations via Raven search results.
- Added `GET /api/noona/raven/library/latest` route in Moon for fetching the latest library updates via Sage.
- Enhanced Kavita tests to include query-based metadata matching and updated match structures.
- Added tests for Vault client to verify recommendation storage and validation logic.
- Updated `LibraryService` in Raven to support chapter normalization, merging, and tracking for downloaded chapters.